umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_trimethylamine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h3#v" "C#h3#v" "N#n#v3"]
      :bonds [[0 3 :single] [1 3 :single] [2 3 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h3#v" "C#h3#v" "N#n#v3"]
      :bonds [[0 3 :single] [1 3 :single] [2 3 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
